fixed sidebar alignment, only expand group not entire row

--- a/src/scss/groups.scss
+++ b/src/scss/groups.scss
@@ -1,6 +1,7 @@
 .cardGrid{
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .groupCard {
